--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+⁷<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -32,7 +32,7 @@
 </head>
 <body>
 <video controls="" name="media">
-  <source src="https://ncdn-y1-w4.teamcloud.am/live/eds/BoonTV/SAF-HLS/BoonTV.m3u8" type="application/vnd.apple.mpegurl">
+  <source src="https://ncdn-y1-w4.teamcloud.am/live/eds/FreeNews/SAF-HLS/FreeNews.m3u8" type="application/vnd.apple.mpegurl">
 </video>
 </body>
 </html>
